@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_rewrite: Treat a RewriteRule substitution that expands to
+     "-" to behave as if a literal "-" was used in the RewriteRule
+     (no substitution). [Eric Covener]
+
   *) mod_authnz_ldap: Don't try a potentially expensive nested groups
      search before exhausting all AuthLDAPGroupAttribute checks on the
      current group. PR52464 [Eric Covener]
